--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,15 +8,23 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
+
     &-main {
         width: 300px;
         height: 50px;
         font-size: 16px;
         margin-top: 67px;
     }
+
     &-submit {
         width: 100%;
         height: 55px;
         font-size: 16px;
+    }
+
+    &-mini {
+        width: 131px;
+        height: 40px;
+        font-style: 14px;
     }
 }
