--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -39,6 +39,15 @@
     &-mini {
         min-height: 140px;
     }
+    .error {
+        border: 1px solid $main-color;
+    }
+    label.error {
+        font-size: 12px;
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
 }
 
 #consultation, #order, #thanks {
