--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,4 +8,14 @@
         font-weight: 500;
         font-size: 20px;
     }
+    .error {
+        border: 1px solid $main-color;
+    }
+    label.error {
+        color: #fff;
+        font-size: 12px;
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
 }
